# pymedphys

./: .all-contributorsrc  .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  ALIASES.json  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.html  README.md  README.rst  TODOs.org  app.py  azure-pipelines.yml  bootstrap-with-conda-env.bat  box-with-overlapping-patient-and-target.dcm  changelog.md  claude_updated.yml  conf.py  conftest.py  contributing.md  dependencies.json  docs  dummy.ipynb  (+73 more)
.azure-pipelines/: windows.yml
.github/: pull_request_template.md  test-github-dir.txt  workflows-readme.md
.github/workflow-templates/: python-test.yml
.github/workflows/: a-different-name.yml  actionlint.yml  all.yml  anthropic-workflow-tests.yml  ci.yml  claude-assistant.yml  claude.yml  conda-package.yml  conflicts.yml  cypress.yml  deps.yml  docs.yml  example-constancy.yml  heroku.yml  integration-tests.yml  library.yml  library.yml-disable  library.yml.hide  lint.yml  main.yml  mosaiq-db-tests.yml  on-push.yml  online-app.yml  online-app.yml.hide  paper.yml  pre-commit.yml  propagate-conflict-fixer.yml  pull-requests.yml  pytest.yml  release.yml  releases.yml  sanity-checks.yml  security-scan.yml  security.yml  test-and-deploy.yml  tests.yml  tox.yml  type-check.yml  unit-tests.yml  wheels.yml
_modules/: index.html
_sources/: README.rst  index.rst  release-notes.md
app/: .gitignore  JUPYTERLAB-LICENSE  create-embedded-python.py  create-standalone-exe.py  example.ipynb  index.html  main.py  package.json  tsconfig.json  yarn.lock.REMOVED.git-id
app/app/: app.icns.REMOVED.git-id
app/config/: webpack.config.js
app/configs/: webpack.config.renderer.dev.babel.js
app/public/: index.html  manifest.json
app/resources/: icon.ico.REMOVED.git-id
app/src/: App.css  App.tsx  index.scss  index.tsx  pyodide.tsx  raw.macro.d.ts  root.tsx  something_awesome.py
app/typing/: data.d.ts  pyodide.d.ts  python.d.ts  webworkers.d.ts
application/: package.json  tsconfig.json  yarn.lock.REMOVED.git-id
applications/desktop/: index.html  main.js  package.json  yarn.lock.REMOVED.git-id
archive/hiding_for_now/: layers.yml  tox.ini
archive/old_tests/: dicom_mudensity.py
azure-pipelines/: linux.yml  macos.yml
azure-pipelines/scripts/: activate.sh  conda-environment.yml  install-and-test.yml  matplotlib-backend.sh
binary/: build-binary.py  pyinstaller-bundle-script.py  pymedphys.bat  test.py
binary/auto-update-version/: README.md  bootstrap.py  bootstrap.pyw  make-installer.sh
binder/: requirements.txt
claude_created_workflows_preview/: ci.yml  claude.yml  conda-package.yml  docs.yml  integration-tests.yml  library.yml
cli/: index.html
cli/ref/: dicom.html  icom.html  index.html  pinnacle.html  pseudonymisation.html  trf.html
conda-recipe/: README.md  bld.bat  build.sh  conda_build_config.yaml  generate_recipe.sh  meta.yaml
contrib/: documentation.html  index.html  why-open-source.html
contrib/dive/: create-streamlit-exe.html  index.html  why-open-source.html
contrib/info/: docs-guide.html  file-structure.html  index.html  release-guide.html
contrib/other/: add-jupyter-kernel.html  index.html  win-open-ssh.html
contrib/setups/: index.html  setup-linux.html  setup-mac.html  setup-win.html
contrib/tips/: add-jupyter-kernel.html  index.html  win-open-ssh.html
csharp/: Class1.cs  Gamma.csproj  Program.cs  README.md
csharp/ConsoleHelloWorld/: Program.cs  csharp.csproj
csharp/Greeter/: HelloWorld.proto
csharp/GreeterClient/: Program.cs
csharp/GreeterServer/: Program.cs
data/collapsedcone/: README.md
data/dcmdose/: RP.DICOMORIENT.HFS.dcm  generate_rp.py
data/dcmplan/: RP.DICOMORIENT.HFS_from_PyMedPhys.dcm  RP.test.dcm
data/trf/: 17_04_19 21_18_39 Z .csv  17_04_19 21_18_39 Z .csv.REMOVED.git-id  17_04_19 21_59_24 Z 2-2_DIR SCALP.csv.REMOVED.git-id  17_04_30 21_43_26 Z 1-1_DIR E.trf  17_04_30 21_43_26 Z 1-1_DIR E.trf.REMOVED.git-id  17_05_17 03_03_14 Z 1-1_RPO 200.csv.REMOVED.git-id
docker/: download.py  start.sh  wait-for-it.sh  wrapper.c
docker/mosaiq/: docker-compose.yml
docs/: README.rst  agpl-benefits.rst  code.rst  conf.py  contributing.rst  gamma.rst  genindex.rst  geometry.rst  index.rst  installation.rst  licensing-notes.rst  mudensity.rst  notebooks.ipynb  physical-design.rst  release-notes.rst  requirements.txt
docs/_static/: browserconfig.xml  site.webmanifest  style.css  theme_overrides.css
docs/_templates/: footer.html  layout.html
docs/background/: autocontouring.rst  elekta-logfiles.rst  file-structure.rst  index.rst
docs/cli/: trf.rst
docs/contrib/: index.rst
docs/details/: contributing.rst  details.rst  licensing-notes.rst  physical-design.rst
docs/developer/: contributing.rst  dependencies.rst  labs.rst  (+3 more)
docs_buildhtml/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
drafts/: sinogram.rst
environment/: Dockerfile
experimentation/: raytracing.py
general/: file-structure.html  index.html  open-source-benefits.html
jupyterlab-bundling/: README.md  requirements.txt
lib/: index.html
messages/: warning-pinnacle.html
proto/: compile.sh  gamma.proto  pymedphys.proto
prototyping/: .gitignore  programmable-state.py  unet-lung.ipynb  unet.ipynb
pymedphys/: .pylintrc  __init__.py  _config.py  _delivery.py  _imports.py  _version.py  conftest.py  dicom.py  electronfactors.py  experimental.py  mephysto.py  mosaiq.py  mudensity.py  pinnacle.py  trf.py  wlutz.py
scripts/: build-binary.py  build_dependency_tree.py  create-conda-forge-archive.py  create_dot_files.py  full_test_suite.py  netlify.py  propegate-extras.py  propegate_dependencies.py  propegate_versions.py  pyinstaller_bundle_script.py  pymedphys.bat  resolve_path.cmd  test-watch.py  travis_script.sh
streamlit-bundle/: README.md  app.py
tox/: clean.sh
tutorials/: writing-tutorials.md
(+3523 files in other folders)
